# investbook

./: .gitignore  Dockerfile  README.md  investbook.png:Zone.Identifier  logo.png:Zone.Identifier  logo.svg:Zone.Identifier  logo2.png:Zone.Identifier  pyproject.toml  usuarios.json
investbook/: __main__.py
investbook/app/: main.py
investbook/app/front/: Info_yahoo.py  cache_data.json  company.py  crypto.py  descartes.py  dividends.py  financials.py  historical.py  index.py  indices.py  info.py  info_finhub.py  price.py  stocks_fmp.py  stocks_polygon.py  usuarios.json
investbook/app/front/components/: labels.py
investbook/app/front/components/cards/: base.py  lote.py
investbook/app/front/components/filter_input/: __init__.py
investbook/app/front/components/layout/: menu.py  (+2 more)
investbook/app/front/images/: usuarios.json
investbook/app/front/shared/: colors.py  layout.py
investbook/prisma/models/: assets.prisma
investbook/sources/: __init__.py
investbook/sources/finhub/: __init__.py  base.py
investbook/sources/finhub/endpoints/: __init__.py  info.py  quote.py  test.py
investbook/sources/fmp/: __init__.py  base.py
investbook/sources/fmp/endpoints/: __init__.py  company.py  company_logo.py  company_profile.py  dividens.py  dividens_historical.py  financial_states.py  financials.py  historical.py  price.py  prince_change.py  quote.py  stock.py  stock_list.py
investbook/sources/polygon/: __init__.py  base.py
investbook/sources/polygon/endpoints/: __init__.py  cryptos.py  indices.py  info.py  options.py  stocks.py
investbook/sources/shared/: __init__.py
investbook/sources/yfinance/: historical.py  info.py  init.py
tests/: FMP.py  Finhub.py  Yahoo finance.py  __init__.py  polygon.py  test.py  test2.py  test_yfinance.py
(+3 files in other folders)
