[tool.poetry]
name = "investbook"
version = "0.1.0"
description = ""
authors = ["MateoSaezMata <msaez@triplealpha.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prisma = "^0.15.0"
nicegui = "2.9.0"
requests = "^2.32.3"
pydantic = "^2.10.2"
yfinance = "^0.2.51"
plotly = "^5.24.1"
yahooquery = "^2.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
