[tool.poetry]
name = "investbook"
version = "0.1.0"
description = ""
authors = ["MateoSaezMata <msaez@triplealpha.in>"]
readme = "README.md"
packages = [
    { include = "investbook" }
]

[tool.poetry.dependencies]
python = "^3.10"
prisma = "^0.15.0"
nicegui = "2.9.0"
requests = "^2.32.3"
pydantic = "^2.10.2"
yfinance = "0.2.54"
plotly = "^5.24.1"
yahooquery = "^2.3.7"
aiofiles = ">=23.1.0"
aiohttp = ">=3.10.2"
aiohappyeyeballs = ">=2.3.0"
aiosignal = ">=1.1.2"
async-timeout = ">=4.0,<6.0"
attrs = ">=17.3.0"
frozenlist = ">=1.1.1"
multidict = ">=4.5,<7.0"
propcache = ">=0.2.0"
yarl = ">=1.17.0,<2.0"
certifi = ">=2024.07.04"
docutils = ">=0.19.0"
starlette = ">=0.40.0,<0.42.0"
anyio = ">=3.4.0,<5"
exceptiongroup = ">=1.0.2"
idna = ">=2.8"
sniffio = ">=1.1"
python-multipart = ">=0.0.18"
bidict = ">=0.21.0"
python-engineio = ">=4.8.0"
simple-websocket = ">=0.10.0"
wsproto = "*"
colorama = "*"
httptools = ">=0.5.0"
python-dotenv = ">=0.13"
pyyaml = ">=5.1"
watchfiles = ">=0.13"
svgwrite = "*"
pillow = "*"
setuptools = "*"
yahoo-fin = "^0.8.9.1"
lxml = {version = "^6.0.0", extras = ["all"]}
requests-html = "^0.10.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
